packages/synapse-react-client/src/components/MailchimpSubscribeSection/MailchimpSubscribeSection.module.scss
.formRow {
  display: flex;
  align-items: stretch;
  gap: 8px;
}

.emailInput:global(.MuiTextField-root) {
  min-width: 350px;

  :global(.MuiOutlinedInput-root) {
    border-radius: 4px;
    background-color: white;

    fieldset {
      border: 1px solid #e4e4e4;
    }
  }
}

.submitButton:global(.MuiButton-root) {
  border-radius: 8px;
}

.formWrapper {
  margin-top: 16px;
}

.description {
  margin-top: 8px;
}

.statusMessage {
  margin-top: 4px;
  display: block;
}

.imageColumn {
  width: 100%;
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;

  @media (min-width: 600px) {
    width: 200px;
  }
}

